[refs #74884] Fix align btn default and search bar.

--- a/docs/Redesign Docs/RedesignTheme/css/styles.scss
+++ b/docs/Redesign Docs/RedesignTheme/css/styles.scss
@@ -522,6 +522,7 @@ footer .text ul li .fa-arrow-up {
 
 input.form-control.search-bar {
   border: none;
+  height: 100%;  // TODO: Better fix to vertical align btn default and search bar
 }
 
 .listing.block-inset ul {
